update to internal commit 50c4cb36

--- a/programming/javascript/upgrade-guide/9to10.md
+++ b/programming/javascript/upgrade-guide/9to10.md
@@ -107,7 +107,7 @@ APIs for setting up the SDK have been taken over by the new classes `CaptureVisi
 | `reader.onUniqueRead` or <br>`scanner.onUniqueRead` | `let filter = new MultiFrameResultCrossFilter();`<br>`filter.enableResultDeduplication(EnumCapturedResultItemType.CRIT_BARCODE, true);`<br>`cvRouter.addResultFilter(filter);`<br>`let resultReceiver = new Dynamsoft.CVR.CapturedResultReceiver();`<br>`resultReceiver.onDecodedBarcodesReceived = result => { };`<br>`cvRouter.addResultReceiver(resultReceiver);`                |
 | `reader.startScanning()` or <br>`scanner.show()`    | `let cameraView = await Dynamsoft.DCE.CameraView.createInstance();`<br>`cameraEnhancer = await Dynamsoft.DCE.CameraEnhancer.createInstance(cameraView);`<br>`//"cameraViewContainer" is usually an HTMLDivElement`<br>`cameraViewContainer.append(cameraView.getUIElement());`<br>`cvRouter.setInput(cameraEnhancer);`<br>`cameraEnhancer.open();`<br>`cvRouter.startCapturing("SPECIFY-A-TEMPLATE")` |
 | `reader.stopScanning()` or <br>`scanner.hide()`     | [cvRouter.stopCapturing()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-image-processing.html?product=dbr&repoType=web#stopcapturing)<br>`cameraEnhancer.close();`<br>`cameraViewContainer.style.display = "none"`                                                                                        |
-| `reader.resumeScanning()`                           | [cvRouter.startCautring('SPECIFY-A-TEMPLATE')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-image-processing.html?product=dbr&repoType=web#startcapturing)                                                                                                                                                |
+| `reader.resumeScanning()`                           | [cvRouter.startCapturing('SPECIFY-A-TEMPLATE')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-image-processing.html?product=dbr&repoType=web#startcapturing)                                                                                                                                                |
 
 ### Process Settings
 
@@ -146,30 +146,20 @@ The following assumes `ScanSettings` is the object returned by `reader.getScanSe
 | `scanner.getUIElement()`                                                                                                                         | [cameraView.getUIElement()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#getuielement)                                        |
 | `scanner.setUIElement()`                                                                                                                         | [cameraView.setUIElement()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#setuielement)                                        |
 | `Dynamsoft.DBR.BarcodeScanner.defaultUIElementURL="THE-URL-TO-THE-HTML"`                                                                         | [Dynamsoft.DCE.CameraView.createInstance("THE-URL-TO-THE-HTML")](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#createinstance) |
-| `scanner.barcodeFillStyle` <br>`scanner.barcodeStrokeStyle` <br>`scanner.barcodeLineWidth`                                                       | [Change the preset style](#how-to-change-a-preset-style) `STYLE_ORANGE_STROKE` (ID = 2) .                                                                                                                                   |
-| `scanner.barcodeFillStyleBeforeVerification` <br>`scanner.barcodeStrokeStyleBeforeVerification` <br>`scanner.barcodeLineWidthBeforeVerification` | [Change the preset style](#how-to-change-a-preset-style) `STYLE_ORANGE_STROKE_TRANSPARENT` (ID = 10).                                                                                                                      |
+| `scanner.barcodeFillStyle` <br>`scanner.barcodeStrokeStyle` <br>`scanner.barcodeLineWidth`                                                       | Change the preset style `STYLE_GREEN_STROKE` (ID = 2).                                                                                                                                   |
+| `scanner.barcodeFillStyleBeforeVerification` <br>`scanner.barcodeStrokeStyleBeforeVerification` <br>`scanner.barcodeLineWidthBeforeVerification` | Change the preset style `STYLE_GREEN_STROKE_TRANSPARENT` (ID = 10).                                                                                                                      |
 | `scanner.regionMaskFillStyle` <br>`scanner.regionMaskStrokeStyle` <br>`scanner.regionMaskLineWidth`                                              | [cameraView.setScanRegionMaskStyle()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#setscanregionmaskstyle)                    |
 | `scanner.setVideoFit()`                                                                                                                          | [cameraView.setVideoFit()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#setvideofit)                                          |
 | `scanner.getVideoFit()`                                                                                                                          | [cameraView.getVideoFit()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#getvideofit)                                          |
 | `scanner.ifShowScanRegionMask`                                                                                                                   | [cameraView.setScanRegionMaskVisible()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#setscanregionmaskvisible)                |
 
-### How to change a preset style
-
-```javascript
-// Step one: get a copy of the preset style
-let dbrStyle = Dynamsoft.DCE.DrawingStyleManager.getDrawingStyle(Dynamsoft.DCE.DrawingStyleManager.STYLE_ORANGE_STROKE);
-// Step two: make changes to the copy
-dbrStyle.fillStyle = 'rgba(100,100,300,0.5)';
-// Step three: update the original preset style with the copy
-Dynamsoft.DCE.DrawingStyleManager.updateDrawingStyle(Dynamsoft.DCE.DrawingStyleManager.STYLE_ORANGE_STROKE,dbrStyle);
-```
 
 ## Change the APIs for camera control
 
 | API in v9.x                                       | API in v10.x,  by the independent `CameraEnhancer` instance                                                                                                                                                                                                                                                                                                                    |
 | ------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| `scanner.open()`                                  | [cameraEnhancer.open()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#open) <br>[cvRouter.startCautring('SPECIFY-A-TEMPLATE')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#startcapturing) |
-| `scanner.close()`                                 | [cvRouter.stopCapturing()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#stopcapturing) <br>[cameraEnhancer.close()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#close)                    |
+| `scanner.open()`                                  | [cameraEnhancer.open()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#open) <br>[cvRouter.startCapturing('SPECIFY-A-TEMPLATE')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-image-processing.html?product=dbr&repoType=web#startcapturing) |
+| `scanner.close()`                                 | [cvRouter.stopCapturing()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-image-processing.html?product=dbr&repoType=web#stopcapturing) <br>[cameraEnhancer.close()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#close)                    |
 | `scanner.isOpen()`                                | [cameraEnhancer.isOpen()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#isopen)                                                                                                                                                                                                                                  |
 | `scanner.singleFrameMode`                         | [cameraEnhancer.singleFrameMode](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/acquisition.html#singleframemode)                                                                                                                                                                                                                     |
 | `scanner.ifSkipCameraInspection`                  | [cameraEnhancer.ifSkipCameraInspection](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#ifskipcamerainspection)                                                                                                                                                                                                    |
@@ -184,8 +174,8 @@ Dynamsoft.DCE.DrawingStyleManager.updateDrawingStyle(Dynamsoft.DCE.DrawingStyleM
 | `Dynamsoft.DBR.Barcodescanner.testCameraAccess()` | [Dynamsoft.DCE.CameraEnhancer.testCameraAccess()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#testcameraaccess)                                                                                                                                                                                                |
 | `scanner.play()`                                  | [cameraEnhancer.open()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#open) or <br>[cameraEnhancer.resume()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#resume) if paused.                                                                      |
 | `scanner.onPlayed`                                | [cameraEnhancer.on("played", fn)](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/auxiliary.html#on)                                                                                                                                                                                                                                   |
-| `scanner.pauseScan()`                             | [cvRouter.stopCapturing()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#stopcapturing) while camera is still playing.                                                                                                                                     |
-| `scanner.resumeScan()`                            | [cvRouter.startCapturing('SPECIFY-A-TEMPLATE')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#startcapturing) when camera is already playing.                                                                                                               |
+| `scanner.pauseScan()`                             | [cvRouter.stopCapturing()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-image-processing.html?product=dbr&repoType=web#stopcapturing) while camera is still playing.                                                                                                                                     |
+| `scanner.resumeScan()`                            | [cvRouter.startCapturing('SPECIFY-A-TEMPLATE')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-image-processing.html?product=dbr&repoType=web#startcapturing) when camera is already playing.                                                                                                               |
 | `scanner.pause()`                                 | [cameraEnhancer.pause()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#pause)                                                                                                                                                                                                                                    |
 | `scanner.stop()`                                  | [cameraEnhancer.close()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#close)                                                                                                                                                                                                                                    |
 | `scanner.videoSrc`                                | [cameraEnhancer.videoSrc](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#videosrc)                                                                                                                                                                                                                                |
@@ -242,7 +232,7 @@ The following properties are replaced by similar properties under `SimplifiedCap
 
 | RuntimeSettings Property | SimplifiedCaptureVisionSettings Parameter | Template File Parameter |
 | ------------------------------- | ----------------------------------------- | ----------------------- |
-| `region` | [`roi`](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/interfaces/simplified-capture-vision-settings.html#roi) & [`roiMeasuredInPercentage`](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/interfaces/simplified-capture-vision-settings.html#roimeasuredinpercentage) | [`TargetROIDef.Location.Offset`]({{ site.dcv_parameters_reference }}target-roi-def/location.html?product=dbr&repoType=core){:target="_blank"} |
+| `region` | [`roi`](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/interfaces/simplified-capture-vision-settings.html#roi) & [`roiMeasuredInPercentage`](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/interfaces/simplified-capture-vision-settings.html#roimeasuredinpercentage) | [`TargetROIDef.Location.Offset`]({{ site.dcv_parameters }}target-roi-def/location.html?product=dbr&repoType=core){:target="_blank"} |
 | `timeout` | **Deprecated and no longer available** | **Deprecated and no longer available** |
 
 #### Migrate to SimplifiedBarcodeReaderSettings
@@ -251,15 +241,15 @@ The following properties are replaced by similar properties under `SimplifiedBar
 
 | RuntimeSettings Property | SimplifiedBarcodeReaderSettings Property | Template File Parameter |
 | ------------------------------- | ----------------------------------------- | ----------------------- |
-| `minBarcodeTextLength` | [`minBarcodeTextLength`](../api-reference/interfaces/simplified-barcode-reader-settings.md#minbarcodetextlength) | [`BarcodeFormatSpecification.BarcodeTextLengthRangeArray`]({{ site.dcv_parameters_reference }}barcode-format-specification/barcode-text-length-range-array.html?product=dbr&repoType=core){:target="_blank"} |
-| `minResultConfidence` | [`minResultConfidence`](../api-reference/interfaces/simplified-barcode-reader-settings.md#minresultconfidence) | [`BarcodeFormatSpecification.MinResultConfidence`]({{ site.dcv_parameters_reference }}barcode-format-specification/min-result-confidence.html?product=dbr&repoType=core){:target="_blank"} |
-| `localizationModes` | [`localizationModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#localizationmodes) | [`BarcodeReaderTaskSetting.LocationModes`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/localization-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `expectedBarcodesCount` | [`expectedBarcodesCount`](../api-reference/interfaces/simplified-barcode-reader-settings.md#expectedbarcodescount) | [`BarcodeReaderTaskSetting.ExpectedBarcodesCount`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/expected-barcodes-count.html?product=dbr&repoType=core){:target="_blank"} |
-| `barcodeFormatIds` | [`barcodeFormatIds`](../api-reference/interfaces/simplified-barcode-reader-settings.md#barcodeformatids) | [`BarcodeReaderTaskSetting.BarcodeFormatIds`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/barcode-format-ids.html?product=dbr&repoType=core){:target="_blank"} |
-| `barcodeFormatIds_2` | [`barcodeFormatIds`](../api-reference/interfaces/simplified-barcode-reader-settings.md#barcodeformatids) | [`BarcodeReaderTaskSetting.BarcodeFormatIds`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/barcode-format-ids.html?product=dbr&repoType=core){:target="_blank"} |
-| `deblurModes` | [`deblurModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#deblurmodes) | [`BarcodeReaderTaskSetting.DeblurModes`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/deblur-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `deblurLevel` | [`deblurModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#deblurmodes) | [`BarcodeReaderTaskSetting.DeblurModes`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/deblur-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `maxAlgorithmThreadCount` | [`maxThreadsInOneTask`]({{ site.dbr_cpp_api }}simplified-barcode-reader-settings.html#maxthreadsinonetask) | [`BarcodeReaderTaskSetting.MaxThreadsInOneTask`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/max-threads-in-one-task.html?product=dbr&repoType=core){:target="_blank"} |
+| `minBarcodeTextLength` | [`minBarcodeTextLength`](../api-reference/interfaces/simplified-barcode-reader-settings.md#minbarcodetextlength) | [`BarcodeFormatSpecification.BarcodeTextLengthRangeArray`]({{ site.dcv_parameters }}barcode-format-specification/barcode-text-length-range-array.html?product=dbr&repoType=core){:target="_blank"} |
+| `minResultConfidence` | [`minResultConfidence`](../api-reference/interfaces/simplified-barcode-reader-settings.md#minresultconfidence) | [`BarcodeFormatSpecification.MinResultConfidence`]({{ site.dcv_parameters }}barcode-format-specification/min-result-confidence.html?product=dbr&repoType=core){:target="_blank"} |
+| `localizationModes` | [`localizationModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#localizationmodes) | [`BarcodeReaderTaskSetting.LocationModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/localization-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `expectedBarcodesCount` | [`expectedBarcodesCount`](../api-reference/interfaces/simplified-barcode-reader-settings.md#expectedbarcodescount) | [`BarcodeReaderTaskSetting.ExpectedBarcodesCount`]({{ site.dcv_parameters }}barcode-reader-task-settings/expected-barcodes-count.html?product=dbr&repoType=core){:target="_blank"} |
+| `barcodeFormatIds` | [`barcodeFormatIds`](../api-reference/interfaces/simplified-barcode-reader-settings.md#barcodeformatids) | [`BarcodeReaderTaskSetting.BarcodeFormatIds`]({{ site.dcv_parameters }}barcode-reader-task-settings/barcode-format-ids.html?product=dbr&repoType=core){:target="_blank"} |
+| `barcodeFormatIds_2` | [`barcodeFormatIds`](../api-reference/interfaces/simplified-barcode-reader-settings.md#barcodeformatids) | [`BarcodeReaderTaskSetting.BarcodeFormatIds`]({{ site.dcv_parameters }}barcode-reader-task-settings/barcode-format-ids.html?product=dbr&repoType=core){:target="_blank"} |
+| `deblurModes` | [`deblurModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#deblurmodes) | [`BarcodeReaderTaskSetting.DeblurModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/deblur-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `deblurLevel` | [`deblurModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#deblurmodes) | [`BarcodeReaderTaskSetting.DeblurModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/deblur-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `maxAlgorithmThreadCount` | [`maxThreadsInOneTask`]({{ site.dbr_cpp_api }}simplified-barcode-reader-settings.html#maxthreadsinonetask) | [`BarcodeReaderTaskSetting.MaxThreadsInOneTask`]({{ site.dcv_parameters }}barcode-reader-task-settings/max-threads-in-one-task.html?product=dbr&repoType=core){:target="_blank"} |
 
 > Remarks:
 >
@@ -268,8 +258,8 @@ The following properties are replaced by similar properties under `SimplifiedBar
 
 | FurtherModes Property | SimplifiedBarcodeReaderSettings Property | Template File Parameter |
 | ---------------------- | ----------------------------------------- | ----------------------- |
-| `grayscaleTransformationModes` | [`grayscaleTransformationModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#grayscaletransformationmodes) | [`ImageParameter.GrayscaleTransformationModes`]({{ site.dcv_parameters_reference }}image-parameter/grayscale-enhancement-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `imagePreprocessingModes` | [`grayscaleEnhancementModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#grayscaleenhancementmodes) | [`ImageParameter.GrayscaleEnhancementModes`]({{ site.dcv_parameters_reference }}image-parameter/grayscale-transformation-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `grayscaleTransformationModes` | [`grayscaleTransformationModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#grayscaletransformationmodes) | [`ImageParameter.GrayscaleTransformationModes`]({{ site.dcv_parameters }}image-parameter/grayscale-enhancement-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `imagePreprocessingModes` | [`grayscaleEnhancementModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#grayscaleenhancementmodes) | [`ImageParameter.GrayscaleEnhancementModes`]({{ site.dcv_parameters }}image-parameter/grayscale-transformation-modes.html?product=dbr&repoType=core){:target="_blank"} |
 
 > Remarks: The mode `IPM_MORPHOLOGY` of `imagePreprocessingModes` is migrated to `BinarizationModes`. The mode arguments `MorphOperation`, `MorphOperationKernelSizeX`, `MorphOperationKernelSizeY`, `MorphShape` are now available for all modes of `BinarizationModes`.
 
@@ -279,24 +269,24 @@ So far, we mentioned the settings that have been included in the *SimplifiedCapt
 
 | RuntimeSettings Property | Template File Parameter |
 | ------------------------------- | ----------------------- |
-| `scaleDownThreshold` | [`ImageParameter.ScaleDownThreshold`]({{ site.dcv_parameters_reference }}image-parameter/scale-down-threshold.html?product=dbr&repoType=core){:target="_blank"} |
-| `binarizationModes` | [`ImageParameter.BinarizationModes`]({{ site.dcv_parameters_reference }}image-parameter/binarization-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `textResultOrderModes` | [`BarcodeReaderTaskSetting.TextResultOrderModes`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/text-result-order-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `returnBarcodeZoneClarity` | [`BarcodeReaderTaskSetting.ReturnBarcodeZoneClarity`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/return-barcode-zone-clarity.html?product=dbr&repoType=core){:target="_blank"} |
-| `scaleUpModes` | [`ImageParameter.ScaleUpModes`]({{ site.dcv_parameters_reference }}image-parameter/scale-up-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `barcodeZoneMinDistanceToImageBorders` | [`BarcodeFormatSpecification.BarcodeZoneMinDistanceToImageBorders`]({{ site.dcv_parameters_reference }}barcode-format-specification/barcode-zone-min-distance-to-image-borders.html?product=dbr&repoType=core){:target="_blank"} |
-| `terminatePhase` | [`BarcodeReaderTaskSetting.TerminateSettings`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/terminate-setting.html?product=dbr&repoType=core){:target="_blank"} |
+| `scaleDownThreshold` | [`ImageParameter.ScaleDownThreshold`]({{ site.dcv_parameters }}image-parameter/scale-down-threshold.html?product=dbr&repoType=core){:target="_blank"} |
+| `binarizationModes` | [`ImageParameter.BinarizationModes`]({{ site.dcv_parameters }}image-parameter/binarization-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `textResultOrderModes` | [`BarcodeReaderTaskSetting.TextResultOrderModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/text-result-order-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `returnBarcodeZoneClarity` | [`BarcodeReaderTaskSetting.ReturnBarcodeZoneClarity`]({{ site.dcv_parameters }}barcode-reader-task-settings/return-barcode-zone-clarity.html?product=dbr&repoType=core){:target="_blank"} |
+| `scaleUpModes` | [`ImageParameter.ScaleUpModes`]({{ site.dcv_parameters }}image-parameter/scale-up-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `barcodeZoneMinDistanceToImageBorders` | [`BarcodeFormatSpecification.BarcodeZoneMinDistanceToImageBorders`]({{ site.dcv_parameters }}barcode-format-specification/barcode-zone-min-distance-to-image-borders.html?product=dbr&repoType=core){:target="_blank"} |
+| `terminatePhase` | [`BarcodeReaderTaskSetting.TerminateSettings`]({{ site.dcv_parameters }}barcode-reader-task-settings/terminate-setting.html?product=dbr&repoType=core){:target="_blank"} |
 
 | FurtherModes Property | Template File Parameter |
 | ---------------------- | ----------------------- |
-| `colourConversionModes` | [`ImageParameter.ColourConversionModes`]({{ site.dcv_parameters_reference }}image-parameter/colour-conversion-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `regionPredetectionModes` | [`ImageParameter.RegionPredetectionModes`]({{ site.dcv_parameters_reference }}image-parameter/region-predetection-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `textureDetectionModes` | [`ImageParameter.TextureDetectionModes`]({{ site.dcv_parameters_reference }}image-parameter/texture-detection-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `textFilterModes` | [`ImageParameter.TextDetectionMode`]({{ site.dcv_parameters_reference }}image-parameter/text-detection-mode.html?product=dbr&repoType=core){:target="_blank"} & [`ImageParameter.IfEraseTextZone`]({{ site.dcv_parameters_reference }}image-parameter/if-erase-text-zone.html?product=dbr&repoType=core){:target="_blank"} |
-| `dpmCodeReadingModes` | [`BarcodeReaderTaskSetting.DPMCodeReadingModes`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/dpm-code-reading-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `deformationResistingModes` | [`BarcodeReaderTaskSetting.DeformationResistingModes`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/deformation-resisting-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `barcodeComplementModes` | [`BarcodeReaderTaskSetting.BarcodeComplementModes`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/barcode-complement-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `barcodeColourModes` | [`BarcodeReaderTaskSetting.BarcodeColourModes`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/barcode-colour-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `colourConversionModes` | [`ImageParameter.ColourConversionModes`]({{ site.dcv_parameters }}image-parameter/colour-conversion-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `regionPredetectionModes` | [`ImageParameter.RegionPredetectionModes`]({{ site.dcv_parameters }}image-parameter/region-predetection-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `textureDetectionModes` | [`ImageParameter.TextureDetectionModes`]({{ site.dcv_parameters }}image-parameter/texture-detection-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `textFilterModes` | [`ImageParameter.TextDetectionMode`]({{ site.dcv_parameters }}image-parameter/text-detection-mode.html?product=dbr&repoType=core){:target="_blank"} & [`ImageParameter.IfEraseTextZone`]({{ site.dcv_parameters }}image-parameter/if-erase-text-zone.html?product=dbr&repoType=core){:target="_blank"} |
+| `dpmCodeReadingModes` | [`BarcodeReaderTaskSetting.DPMCodeReadingModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/dpm-code-reading-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `deformationResistingModes` | [`BarcodeReaderTaskSetting.DeformationResistingModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/deformation-resisting-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `barcodeComplementModes` | [`BarcodeReaderTaskSetting.BarcodeComplementModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/barcode-complement-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `barcodeColourModes` | [`BarcodeReaderTaskSetting.BarcodeColourModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/barcode-colour-modes.html?product=dbr&repoType=core){:target="_blank"} |
 
 
 ## Other API changes
@@ -311,4 +301,3 @@ So far, we mentioned the settings that have been included in the *SimplifiedCapt
 | `scanner.updateTipMessage()`                                                     | [cameraView.updateTipMessage()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#updatetipmessage)                                                                                                                                                                                                                                                                                                               |
 | `reader.getModeArgument()`<br>`reader.setModeArgument()`                         | No equivalent.                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
 | `scanner.ifSaveOriginalImageInACanvas` <br>`scanner.getOriginalImageInACanvas()` | `settings = cvRouter.getSimplifiedSettings('SPECIFY-A-TEMPLATE');`<br>`settings.capturedResultItemTypes += Dynamsoft.Core.EnumCapturedResultItemType.CRIT_ORIGINAL_IMAGE;`<br>`await cvRouter.updateSettings("detect-document-boundaries", settings);`<br>`const resultReceiver = new Dynamsoft.CVR.CapturedResultReceiver();`<br>`resultReceiver.onOriginalImageResultReceived = result => { // GET-THE-ORIGINAL-IMAGE //};`<br>`cvRouter.addResultReceiver(resultReceiver)` |
-
